k8s/overlays/rc/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ehr-ui-ingress
spec:
  tls:
    - hosts:
        - stg.ciyex.com
      secretName: ciyex-ehr-ui-rc-tls
  rules:
    - host: stg.ciyex.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ciyex-ehr-ui-rc
                port:
                  number: 3000
